--- a/.github/workflows/deploy-i18n.yml
+++ b/.github/workflows/deploy-i18n.yml
@@ -134,9 +134,50 @@ jobs:
           docker push registry.digitalocean.com/${{ secrets.DOCR_NAME }}/${{ matrix.site_tlds }}/news-${{ matrix.languages }}:$tagname
           docker push registry.digitalocean.com/${{ secrets.DOCR_NAME }}/${{ matrix.site_tlds }}/news-${{ matrix.languages }}:latest
 
+      - name: Clean old DO images
+        run: |
+          rawResponse=$(doctl registry repository list-tags ${{ matrix.site_tlds }}/news-${{ matrix.languages }} --output=json)
+          tags=$(jq '[.[] | {updated_at, tag}]' <<<"$rawResponse")
+          toDelete=()
+          len=$(jq length <<<"$tags")
+          echo "Found $len tags."
+          for i in $(seq 0 $((len - 1))); do
+              tag=$(echo $tags | jq -r --argjson index "$i" '.[$index].tag')
+              updated=$(echo $tags | jq -r --argjson index "$i" '.[$index].updated_at')
+              updatedDate=$(date -d $updated +%s)
+              now=$(date +%s)
+              diff=$(($now - $updatedDate))
+              if [ "$tag" != "latest" ] && [ $diff -gt 172800 ]; then
+                  toDelete+=($tag)
+              fi
+          done
+          echo "Found ${#toDelete[@]} tags to delete."
+          for value in "${toDelete[@]}"; do
+              echo "Deleting tag: $value"
+              doctl registry repository delete-tag ${{ matrix.site_tlds }}/news-${{ matrix.languages }} $value --force
+          done
+
       - name: Clean up Self-hosted setup
         uses: colpal/actions-clean@36e6ca1abd35efe61cb60f912bd7837f67887c8a # tag=v1
         if: ${{ always() }} # To ensure this step runs even when earlier steps fail
+
+  clean:
+    name: Clean up DO images
+    runs-on: ubuntu-20.04
+    needs:
+      - build
+
+    steps:
+      - name: Install doctl
+        uses: digitalocean/action-doctl@v2
+        with:
+          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+
+      - name: Log in to DigitalOcean Container Registry with short-lived credentials
+        run: doctl registry login --expiry-seconds 1200
+
+      - name: Trigger Garbage collection
+        run: doctl registry garbage-collection start --include-untagged-manifests --force
 
   deploy:
     name: Deploy
