--- a/.github/workflows/deploy-i18n.yml
+++ b/.github/workflows/deploy-i18n.yml
@@ -3,7 +3,8 @@ name: i18n - Build and Deploy
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0/6 * * *' # Build once every six hours
+    # - cron: '0 0/6 * * *' # Build once every six hours
+    - cron: '0 0/1 * * *' # Temporarily build once every hour
 
 jobs:
   build:
@@ -121,6 +122,12 @@ jobs:
           docker push ${{ secrets.ACR_NAME }}.azurecr.io/${{ matrix.site_tlds }}/news-${{ matrix.languages }}:$tagname
           docker push ${{ secrets.ACR_NAME }}.azurecr.io/${{ matrix.site_tlds }}/news-${{ matrix.languages }}:latest
 
+      - name: Build the registry test image
+        run: |
+          cd registry-test
+          REGISTRY_NAME=${{ secrets.DOCR_NAME }} TAGNAME_CI=$tagname make build
+          cd ..
+
       - name: Install doctl
         uses: digitalocean/action-doctl@v2
         with:
@@ -133,6 +140,12 @@ jobs:
         run: |
           docker push registry.digitalocean.com/${{ secrets.DOCR_NAME }}/${{ matrix.site_tlds }}/news-${{ matrix.languages }}:$tagname
           docker push registry.digitalocean.com/${{ secrets.DOCR_NAME }}/${{ matrix.site_tlds }}/news-${{ matrix.languages }}:latest
+
+      - name: Push the registry test image
+        run: |
+          cd registry-test
+          REGISTRY_NAME=${{ secrets.DOCR_NAME }} TAGNAME_CI=$tagname make push
+          cd ..
 
       - name: Clean old DO images
         run: |
